[package]
name = "f411ce_embassy_base"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6.0", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f411ce",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
] }
embassy-time = { version = "0.3.2", features = ["defmt", "tick-hz-32_768"] }
# embassy-sync = { version = "0.6.0", features = ["defmt"] }
# embassy-futures = { version = "0.1.1", features = ["defmt"] }
# embassy-usb = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3.8"
defmt-rtt = "0.4.1"

cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

# https://embassy.dev/book/#_cargo_toml_2
# git ls-remote https://github.com/embassy-rs/embassy.git HEAD
[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
# embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
