[package]
name = "f411ce_embassy_base"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6.0", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f411ce",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
] }
embassy-time = { version = "0.3.2", features = ["defmt", "tick-hz-32_768"] }
# embassy-sync = { version = "0.6.0", features = ["defmt"] }
# embassy-futures = { version = "0.1.1", features = ["defmt"] }
# embassy-usb = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3.8"
defmt-rtt = "0.4.1"

cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

# https://embassy.dev/book/#_cargo_toml_2
# git ls-remote https://github.com/embassy-rs/embassy.git HEAD
[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
# embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "b31648f2e59a68748e1c0f1408d1658a2e5e6a08" }

[profile.dev]
opt-level = 1               # default = 0
# debug = 2                   # default = 2
# codegen-units = 16          # default = 16
# debug-assertions = true     # default = true
# overflow-checks = true      # default = true
# lto = false                 # default = false
# incremental = true          # default = true
panic = 'abort'             # default = "unwind"

[profile.release]
# opt-level = 3               # default = 3
debug = 2                   # default = 0
codegen-units = 1           # default = 16
lto = "fat"                 # default = false
# debug-assertions = false    # default = false
# overflow-checks = false     # default = false
# strip = true                # default = false
# incremental = false         # default = false
# panic = "unwind"            # default = "unwind"